// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieReviews should renders correctly 1`] = `
<div
  className="movie-card__reviews movie-card__row"
>
  <div
    className="movie-card__reviews-col"
  >
    <movie-review />
  </div>
  <div
    className="movie-card__reviews-col"
  >
    <movie-review />
  </div>
</div>
`;

exports[`MovieReviews should renders correctly without reviews 1`] = `
<div
  className="movie-card__reviews movie-card__row"
/>
`;
